--- a/assets/css/layout/basis.scss
+++ b/assets/css/layout/basis.scss
@@ -5,7 +5,7 @@ body {
     @extend %background-deep-cove;
 }
 
-main, header {
+main {
     width: 95%;
     margin: 0 auto;
     display: flex;
