--- a/assets/css/layout/header.scss
+++ b/assets/css/layout/header.scss
@@ -1,10 +1,15 @@
 header {
     height: 56px;
     align-items: center;
-    margin: 2rem auto;
+    padding: 2em 0;
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+
 
     .logo {
-        width: 20%;
+        width: 15%;
 
         img {
             width: 145px;
@@ -12,31 +17,39 @@ header {
         }
     }
 
-    .search-bar {
-        @include pattern-input;
-        width: 55%;
-        height: 100%;
-
-        &::placeholder {
-            @include input-placeholder-text;
-        }
-    }
-
-    .user {
+    .search-and-user {
+        width: 80%;
         display: flex;
-        align-items: center;
-        width: 20%;
+        justify-content: space-between;
 
-        img {
-            height: 2rem;
-            width: 2rem;
-            border-radius: 100%;
+
+        .search-bar {
+            @include pattern-input;
+            width: 70%;
+            height: 100%;
+    
+            &::placeholder {
+                @include input-placeholder-text;
+            }
         }
-
-        small {
-            @include fontSize(16px);
-            color: white;
-            padding: 0 .5rem;
+    
+        .user {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            width: 20%;
+    
+            img {
+                height: 2em;
+                width: 2em;
+                border-radius: 100%;
+            }
+    
+            small {
+                @include fontSize(16px);
+                color: white;
+                padding: 0 .5em;
+            }
         }
     }
 }
