--- a/assets/css/layout/menu.scss
+++ b/assets/css/layout/menu.scss
@@ -1,5 +1,5 @@
 nav {
-    width: 20%;
+    width: 15%;
     bottom: 100%;
 
     h4 {
