--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,35 @@
 /* background color to aply opacity */
 /* patern radius for borders */
+/* lib imports */
 /* background colors */
-.sidebar__save-button, nav ul li a .first-icon {
+.container .sidebar__save-button, nav ul li a .first-icon {
   background-color: #5081FB;
 }
 
-.sidebar__personalization input, body {
+.container .sidebar__personalization input, body {
   background-color: #051D3B;
 }
 
-.sidebar__personalization select option, .code__text, .code__dots {
+.container .sidebar__personalization select option, .container .code__text, .container .code__dots {
   background-color: #141414;
 }
 
 /* fonts */
-.sidebar__title, nav h4, body {
+.container .sidebar__title, nav h4, body {
   font-family: "Inter", sans-serif;
 }
 
 /* shadows */
-.code__text {
+.container .code__text {
   box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.24);
 }
 
-.sidebar__save-button, .sidebar__personalization input, .sidebar__personalization select, .sidebar__new-project input, .sidebar__new-project textarea, .code .highlight-button, .code__editor, header .search-bar {
+.container .sidebar__save-button, .container .sidebar__personalization input, .container .sidebar__personalization select, .container .sidebar__new-project input, .container .sidebar__new-project textarea, .container .code .highlight-button, .container .code__editor, header .search-and-user .search-bar {
   border-radius: 8px;
 }
 
 /* functions */
+/* media queries mixins */
 /* mixins */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -373,7 +375,7 @@ body {
   line-height: 1.5rem;
 }
 
-main, header {
+main {
   width: 95%;
   margin: 0 auto;
   display: flex;
@@ -383,46 +385,56 @@ main, header {
 header {
   height: 56px;
   align-items: center;
-  margin: 2rem auto;
+  padding: 2em 0;
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 header .logo {
-  width: 20%;
+  width: 15%;
 }
 header .logo img {
   width: 145px;
   height: 34.05px;
 }
-header .search-bar {
+header .search-and-user {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+header .search-and-user .search-bar {
   background-color: rgba(255, 255, 255, 0.16);
   border: none;
   padding: 1rem;
   box-sizing: border-box;
   color: white;
-  width: 55%;
+  width: 70%;
   height: 100%;
 }
-header .search-bar::placeholder {
+header .search-and-user .search-bar::placeholder {
   color: white;
   opacity: 0.64;
 }
-header .user {
+header .search-and-user .user {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   width: 20%;
 }
-header .user img {
-  height: 2rem;
-  width: 2rem;
+header .search-and-user .user img {
+  height: 2em;
+  width: 2em;
   border-radius: 100%;
 }
-header .user small {
+header .search-and-user .user small {
   font-size: 1rem;
   color: white;
-  padding: 0 0.5rem;
+  padding: 0 0.5em;
 }
 
 nav {
-  width: 20%;
+  width: 15%;
   bottom: 100%;
 }
 nav h4 {
@@ -463,17 +475,22 @@ nav ul li a .second-icon {
   background-color: rgba(80, 129, 251, 0.16);
 }
 
-.code {
-  width: 55%;
+.container {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
 }
-.code__editor {
+.container .code {
+  width: 70%;
+}
+.container .code__editor {
   padding: 2rem;
   background-color: #6BD1FF;
   border: none;
   box-sizing: border-box;
   width: 100%;
 }
-.code__dots {
+.container .code__dots {
   margin-block-start: 0;
   margin-block-end: 0;
   width: 100%;
@@ -481,23 +498,23 @@ nav ul li a .second-icon {
   padding: 1rem;
   border-radius: 8px 8px 0 0;
 }
-.code__dots li {
+.container .code__dots li {
   width: 12px;
   height: 12px;
   border-radius: 50%;
   display: inline-block;
   margin-right: 3px;
 }
-.code__dots li:nth-child(1) {
+.container .code__dots li:nth-child(1) {
   background-color: #FF5F56;
 }
-.code__dots li:nth-child(2) {
+.container .code__dots li:nth-child(2) {
   background-color: #FFBD2E;
 }
-.code__dots li:nth-child(3) {
+.container .code__dots li:nth-child(3) {
   background-color: #27C93F;
 }
-.code__text {
+.container .code__text {
   width: 100%;
   resize: none;
   height: 250px;
@@ -508,7 +525,7 @@ nav ul li a .second-icon {
   padding: 1rem;
   border-radius: 0 0 8px 8px;
 }
-.code .highlight-button {
+.container .code .highlight-button {
   width: 100%;
   border: none;
   padding: 1rem 0;
@@ -516,15 +533,14 @@ nav ul li a .second-icon {
   color: white;
   margin-top: 1rem;
 }
-
-.sidebar {
-  width: 20%;
+.container .sidebar {
+  width: 25%;
 }
-.sidebar__new-project {
+.container .sidebar__new-project {
   padding: 0 0 2rem;
   width: 100%;
 }
-.sidebar__new-project input, .sidebar__new-project textarea {
+.container .sidebar__new-project input, .container .sidebar__new-project textarea {
   background-color: rgba(255, 255, 255, 0.16);
   border: none;
   padding: 1rem;
@@ -534,15 +550,15 @@ nav ul li a .second-icon {
   margin-top: 1rem;
   box-sizing: border-box;
 }
-.sidebar__new-project input::placeholder, .sidebar__new-project textarea::placeholder {
+.container .sidebar__new-project input::placeholder, .container .sidebar__new-project textarea::placeholder {
   color: white;
   opacity: 0.64;
 }
-.sidebar__new-project textarea {
+.container .sidebar__new-project textarea {
   resize: none;
   height: 80px;
 }
-.sidebar__title {
+.container .sidebar__title {
   font-size: 0.75rem;
   color: white;
   text-transform: uppercase;
@@ -551,14 +567,14 @@ nav ul li a .second-icon {
   margin-block-end: 0;
   line-height: 1.125rem;
 }
-.sidebar__personalization {
+.container .sidebar__personalization {
   padding: 0 0 2rem;
   width: 100%;
 }
-.sidebar__personalization select, .sidebar__personalization input {
+.container .sidebar__personalization select, .container .sidebar__personalization input {
   margin-top: 1rem;
 }
-.sidebar__personalization select {
+.container .sidebar__personalization select {
   background-color: rgba(255, 255, 255, 0.16);
   border: none;
   padding: 1rem;
@@ -567,13 +583,13 @@ nav ul li a .second-icon {
   color: rgba(255, 255, 255, 0.64);
   width: 100%;
 }
-.sidebar__personalization input {
+.container .sidebar__personalization input {
   width: 100%;
   border: 1px white solid;
   height: 40px;
   box-sizing: border-box;
 }
-.sidebar__save-button {
+.container .sidebar__save-button {
   width: 100%;
   border: none;
   padding: 1rem 0;
